Add License. Add Unittest. Fix Points